--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,10 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="New App">
-        </activity>
-        <activity
-            android:name=".ListViewDraggingAnimation"
-            android:label="Original App">
-        </activity>
-        <activity
-            android:name=".SelectApp"
-            android:label="@string/title_activity_select_app">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
